Bug 223816 - Jump to folder dialog does not work
Summary: Jump to folder dialog does not work
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: folders (other bugs)
Version First Reported In: 1.99.0
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks: 223438
  Show dependency treegraph
 
Reported: 2010-01-22 17:56 UTC by Thomas McGuire
Modified: 2010-02-06 21:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas McGuire 2010-01-22 17:56:17 UTC
After selecting a folder in the jump to folder dialog and clicking Ok, nothing happens.
Comment 1 Till Adam 2010-02-06 21:34:25 UTC
SVN commit 1086299 by tilladam:

Ensure that we'll find a valid collection index, from an id.

There are optimizations in ETM and the proxies above it that allow
searces by collection id to be fast. In those cases, the start index
parameter to match is ignored. If one of the proxies in between does not
prooperly forward, though, as is currently the case, we have to ensure
we'll still find something, so use a working start index and recursive
searching by default. If the optimization hits, this'll cause no
additional load, and if not, it'll be more correct.

BUG: 223816
CCMAIL: stephen@kdab.com

 M  +2 -4      folderselectiontreeview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1086299