Ensure that we'll find a valid collection index, from an id.

There are optimizations in ETM and the proxies above it that allow
searces by collection id to be fast. In those cases, the start index
parameter to match is ignored. If one of the proxies in between does not
prooperly forward, though, as is currently the case, we have to ensure
we'll still find something, so use a working start index and recursive
searching by default. If the optimization hits, this'll cause no
additional load, and if not, it'll be more correct.

BUG: 223816
CCMAIL: stephen@kdab.com

svn path=/trunk/KDE/kdepim/kmail/; revision=1086299